Update testing formatting

--- a/testing.html
+++ b/testing.html
@@ -51,7 +51,7 @@ A test which tests the result of systems interacting
 
 # Terminology
 
-~Integration Test~
+~~Integration Test~~
 
 ---
 
@@ -288,7 +288,7 @@ $ mocha
 
 
 
-
+.
 ```
 
 ---
@@ -387,9 +387,14 @@ npm install --save-dev babel
 ```javascript
 {
   "scripts": {
+    // As a compiler option
     "test": "mocha --compilers js:babel/register"
   }
 }
+```
+
+```bash
+$ npm test
 ```
 
 ---
@@ -407,6 +412,7 @@ npm install --save-dev babel
 ```javascript
 {
   "scripts": {
+    // As a programmatic require
     "test": "mocha --require babelhook"
   }
 }
@@ -546,6 +552,8 @@ describe('Test suite', ()=> {
 })
 ```
 
+---
+
 # Mocha TDD
 
 **Setup & Teardown:**
@@ -581,7 +589,6 @@ describe('Test suite', ()=> {
 
 ---
 
-
 # Mocha TDD
 
 **Pending tests:**
@@ -600,7 +607,7 @@ describe('Feature', ()=> {
 
 ```javascript
 describe('Feature', ()=> {
-  it.skip(`should ignore this test that's currently broken`, ...)
+  it.skip('should ignore this test that\'s currently broken', ...)
   it('should still pass this test', ...)
 })
 ```
@@ -613,7 +620,7 @@ describe('Feature', ()=> {
 
 ```javascript
 describe('Feature', ()=> {
-  it.only(`should pass this test because it's currently being worked on`, ...)
+  it.only('should pass this test because it\'s currently being worked on', ...)
   it('should ignore this test at the moment', ...)
 })
 ```
@@ -626,9 +633,9 @@ describe('Feature', ()=> {
 
 - `mocha test/test.js`
 - `mocha --watch test/test.js`
-- `mocha --grep="Test suite" test/test.js`
+- `mocha --grep="Test suite" test/test.js` *
   
-  *Only runs tests with "Test suite" in descriptions*
+\* Only runs tests with "Test suite" in descriptions
 
 ---
 
@@ -735,11 +742,11 @@ project_root$ gulp
 **Features:**
 
 - BDD (chaining)
-- node.js & browser support
+- node.js and browser support
 - Multiple assertion styles
   - should: `foo.should.be.a('string')`
   - expect: `expect(foo).to.be.a('string')`
-  - assert: `assert.typeOf(foo, 'string')
+  - assert: `assert.typeOf(foo, 'string')`
 
 ---
 
