Update express & asyncawait

--- a/asyncawait.html
+++ b/asyncawait.html
@@ -466,7 +466,7 @@ foo()
 **Our hero!* **
 
 ```javascript
-async main() => {
+async function main() => {
     let a = await foo()
 
 
@@ -491,7 +491,7 @@ main()
 **Our hero!* **
 
 ```javascript
-async main() => {
+async function main() => {
     let a = await foo()
     let b = await bar(a)
     let c = await baz(b)
@@ -516,7 +516,7 @@ main()
 **Our hero!* **
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     let a = await foo(someArg)
     let b = await bar(a)
     let c = await baz(b)
@@ -541,7 +541,7 @@ main(someArg)
 **Our hero!* **
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     let a = await foo(someArg)
     let b = await bar(a)
     let c = await baz(b)
@@ -566,7 +566,7 @@ main(someArg)
 **Our hero!* **
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     let a = await foo(someArg)
     let b = await bar(a)
     let c = await baz(b)
@@ -591,7 +591,7 @@ main(someArg)
 **Our hero!* **
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     let a = await foo(someArg)
     let b = await bar(a)
     let c = await baz(b)
@@ -616,7 +616,7 @@ main(someArg)
 **Our hero!* **
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     let a = await foo(someArg)
     let b = await bar(a)
     let c = await baz(b)
@@ -641,7 +641,7 @@ async ()=> {
 **Our hero!* **
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     let a = await foo(someArg)
     let b = await bar(a)
     let c = await baz(b)
@@ -897,7 +897,7 @@ class: center, middle
 **Separation of Async and Sync lifecycle phases**
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
 
     let a = await foo(someArg)
     let b = await bar(a)
@@ -923,7 +923,7 @@ async ()=> {
 **Separation of Async and Sync lifecycle phases**
 
 ```javascript
-async main(someArg) => {
+async function main(someArg) => {
     // General Phase
     let a = await foo(someArg)
     let b = await bar(a)
