Fix typos with express

--- a/express.html
+++ b/express.html
@@ -954,11 +954,10 @@ app.get('/user/:id?', (req, res) => {
 
 # Middleware: Composition
 
-**Redundant code...**
+**Refactor redundant code as middleware:**
 
 ```javascript
 let then = require('express-then')
-
 
 
 
@@ -982,35 +981,7 @@ app.put('/user/:id', then(async (req, res) => {
 
 # Middleware: Composition
 
-**Redundant code...**
-
-```javascript
-let then = require('express-then')
-
-
-
-
-
-
-
-app.get('/user/:id', then(async (req, res) => {
-  let id = req.params.id
-  let user = await User.get(id)
-  res.send('user ' + user.name)
-}))
-
-app.put('/user/:id', then(async (req, res) => {
-  let id = req.params.id
-  let user = await User.get(id)
-  user.update(req.body)
-}))
-```
-
----
-
-# Middleware: Composition
-
-**Redundant code...**
+**Refactor redundant code as middleware:**
 
 ```javascript
 let then = require('express-then')
@@ -1020,7 +991,6 @@ let loadUser = then(async (req, res, next) => {
 
 })
 
-
 app.get('/user/:id', then(async (req, res) => {
   let id = req.params.id
   let user = await User.get(id)
@@ -1038,7 +1008,7 @@ app.put('/user/:id', then(async (req, res) => {
 
 # Middleware: Composition
 
-**Redundant code...**
+**Refactor redundant code as middleware:**
 
 ```javascript
 let then = require('express-then')
@@ -1048,7 +1018,6 @@ let loadUser = then(async (req, res, next) => {
 
 })
 
-
 app.get('/user/:id', then(async (req, res) => {
 
 
@@ -1066,7 +1035,7 @@ app.put('/user/:id', then(async (req, res) => {
 
 # Middleware: Composition
 
-**Redundant code...**
+**Refactor redundant code as middleware:**
 
 ```javascript
 let then = require('express-then')
@@ -1076,7 +1045,6 @@ let loadUser = then(async (req, res, next) => {
   req.user = user
 })
 
-
 app.get('/user/:id', then(async (req, res) => {
 
 
@@ -1094,7 +1062,7 @@ app.put('/user/:id', then(async (req, res) => {
 
 # Middleware: Composition
 
-**Refactored to use middleware:**
+**Refactor redundant code as middleware:**
 
 ```javascript
 let then = require('express-then')
@@ -1103,7 +1071,6 @@ let loadUser = then(async (req, res, next) => {
   let user = await User.get(id)
   req.user = user
 })
-
 
 app.get('/user/:id', then(async (req, res) => {
 
@@ -1122,7 +1089,7 @@ app.put('/user/:id', then(async (req, res) => {
 
 # Middleware: Composition
 
-**Refactored to use middleware:**
+**Refactor redundant code as middleware:**
 
 ```javascript
 let then = require('express-then')
@@ -1132,7 +1099,6 @@ let loadUser = then(async (req, res, next) => {
   req.user = user
 })
 
-// Reuse loadUser as a route middleware
 app.get('/user/:id', loadUser, then(async (req, res) => {
 
 
@@ -1172,6 +1138,8 @@ app.put('/user/:id', then(async (req, res, next) => {
 
 # Express: Rendering Views
 
+**Use `res.render` render view with arguments:**
+
 ```javascript
 // Configure ejs view engine
 app.set('views', path.join(__dirname, 'views'))
@@ -1191,6 +1159,7 @@ app.get('/user/:id', loadUser, (req, res) => {
 class: center, middle
 
 # Questions?
+
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
