Use updated highlighter and image scale macro

--- a/asyncawait.html
+++ b/asyncawait.html
@@ -1244,12 +1244,15 @@ class: center, middle
 
 
     </textarea>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
     <script>
+      remark.highlighter.engine = hljs
       remark.macros.scale = function (percentage) {
-        var url = this;
-        return '<img src="' + url + '" style="width: ' + percentage + '" />';
+        var url = this
+        return '<img src="' + url + '" style="width: ' + percentage + '" />'
       }
       var slideshow = remark.create({
         highlightStyle: 'tomorrow-night-bright'
